# shiro

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml  tauri.conf.json
app/icons/: Shiro.icns  build_icons.sh
app/src/: error.rs  main.rs
app/src/gui/: handlers.rs  mod.rs  types.rs
app/src/gui/handlers/: utils.rs
crates/: Cargo.toml
crates/app/: Cargo.toml  tauri.conf.json
crates/app/capabilities/: default.json
crates/app/src/: main.rs
crates/app/src/gui/: handlers.rs  mod.rs  windows_ext.rs
crates/libshiro/: Cargo.toml
crates/libshiro/src/: error.rs  lib.rs
crates/libshiro/src/init/: db.rs  error.rs  mod.rs
crates/libshiro/src/query/: mod.rs  scheme.sql
crates/libshiro/src/query/insert/: mod.rs  new_group.sql  new_server.sql
crates/libshiro/src/query/select/: mod.rs
crates/libsmgr/: Cargo.toml
crates/libsmgr/query/: scheme.sql
crates/libsmgr/src/init/: db.rs  mod.rs
crates/macros/src/: include_str.rs  log.rs
libshiro/: Cargo.toml
libshiro/src/: error.rs  lib.rs
libshiro/src/query/: scheme.sql
libshiro/src/query/insert/: add_tag_to_server.sql  mod.rs  new_server.sql  new_tag.sql
libshiro/src/query/select/: get_group_with_sid.sql  get_server_with_sid.sql  get_sids.sql  get_tags_with_sid.sql  mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
ui/: package-lock.json  package.json  tailwind.config.ts
ui/app/: CmdPalette.tsx  GlobSearch.tsx  Navbar.tsx  entries.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
ui/app/(pages)/: layout.tsx
ui/app/(pages)/servers/: ServerCard.tsx  ToolBar.tsx  page.tsx
ui/app/(pages)/servers/editor/: ServerEditor.tsx  generals.tsx  layout.tsx  page.tsx  sshConfigList.ts  sshConfigRecord.tsx  sshConfigs.tsx
ui/app/(pages)/settings/: GeneralSettings.tsx  page.tsx
ui/components/: ThemeSwitcher.tsx
ui/types/: shiro.ts  ui.tsx
