[package]
name = "shiro"
version = "0.1.0"
description = "A SSH metadata manager"
authors = ["Lumither"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
macros = { path = "../macros" }
libshiro = { path = "../libshiro" }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-api = "0.7.6"

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
homedir = "0.3.4"
tracing = "0.1.41"
futures = "0.3.31"
thiserror = "2.0.11"


[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26.0"
objc = "0.2"


[features]
# workaround with cargo clippy
cargo-clippy = []
