[package]
name = "shiro"
version = "0.1.0"
description = "A SSH metadata manager"
authors = ["Lumither"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ui
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
#window-vibrancy = "0.5.0"

# crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.3", features = ["sqlite"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
thiserror = "2.0.11"
homedir = "0.3.4"
whoami = "1.5.2"
tracing = "0.1.41"

macros = { path = "../macros" }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26.0"
objc = "0.2"
