[package]
name = "libsmgr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
sqlx = { version = "0.8.3", features = ["sqlite", 'runtime-tokio'] }
thiserror = "2.0.11"
homedir = "0.3.4"
tracing = "0.1.41"

macros = { path = "../macros" }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", 'rt-multi-thread'] }
